reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/homepage-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-ui
  namespace: identity
spec:
  selector:
    matchLabels:
      app: deployment-homepage-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: deployment-homepage-ui
    spec:
      containers:
      - name: homepage-ui
        image: 10.157.112.207:5001/identity/homepage_ui:latest
        imagePullPolicy: Always
        resources: {}
      imagePullSecrets:
      - name: meinenghua
      nodeSelector: 
        node-tag: gpu-001
