reserved/pwc-chuangxinzhongxin-k8s-yaml-config-reserved/identity-config/homepage-ui/node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-port-homepage-ui
  namespace: identity
spec:
  selector:
    app: deployment-homepage-ui
  ports:
    - protocol: TCP
      nodePort: 31001
      port: 8082
      targetPort: 8082
  type: NodePort
